# tqc_pytorch

./: .gitignore  README.md  main.py  pyproject.toml
tqc/: functions.py  structures.py  trainer.py
